V.0.3.2.11 - Learning how to use position fixed, z-index & sticky

--- a/02 - CSS/06 - Position/01 - Static, relative & absolute/css/style.css
+++ b/02 - CSS/06 - Position/01 - Static, relative & absolute/css/style.css
@@ -9,7 +9,7 @@ html {
 }
 
 .parent {
-    border: 2px black dotted;
+    border: 2px dotted black ;
     display: inline-block;
 }
 
